--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Bootstrap Preventivo</title>
 </head>
 <body>
+    <!--inserimento navbar-->
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button> <!--fine button mobile inizio logo-text-->
+              <div class="collapse navbar-collapse justify-content-between" id="navbarTogglerDemo01">
+                <a class="navbar-brand text-light" href="#">Bool Factory</a>
+                <ul class="navbar-nav"> <!--inizio menu-->
+                  <li class="nav-item">
+                    <a class="nav-link text-white-50" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white-50" href="#">Servizi</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white-50" href="#">Contatti</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+    </header>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
