--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>Bootstrap Preventivo</title>
 </head>
 <body>
-    <!--inserimento navbar-->
+    <!--inserimento navbar--> 
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark">
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container">
+              <h3 class="navbar-toggler text-light" role="button" href="#">Bool Factory</h3>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button> <!--fine button mobile inizio logo-text-->
               <div class="collapse navbar-collapse justify-content-between" id="navbarTogglerDemo01">
-                <a class="navbar-brand text-light" href="#">Bool Factory</a>
+                <h3 class="collapse navbar-collapse text-light" href="#">Bool Factory</h3>
                 <ul class="navbar-nav"> <!--inizio menu-->
                   <li class="nav-item">
                     <a class="nav-link text-white-50" href="#">Home</a>
@@ -30,7 +31,6 @@
               </div>
             </div>
           </nav>
-
     </header>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
