--- a/index.html
+++ b/index.html
@@ -35,51 +35,83 @@
     </header>
     <main class="container">
 
-      <!--Titolo-->
-
-    <div >
-      <h1 class="mt-4">Richiesta Preventivo</h1>
-      <p class="mt-2">Compila il form per richiedere un preventivo per i nostri servizi di sviluppo. </p>
-    </div>
-
     <!--Form-->
-        <div class="row">
-          <div class="col-lg-6">
-            <form action="#">
+      <div class="row">
+        <div class="col-lg-8">
+          <form action="#">
+              <!--Titolo-->
+            <div >
+              <h1 class="mt-4">Richiesta Preventivo</h1>
+              <p class="mt-2">Compila il form per richiedere un preventivo per i nostri servizi di sviluppo. </p>
+            </div> 
               <!--Inserimento Nome-->
             <div>
-              <label for="userName" class="form-label">Nome</label>
+              <label for="userName" class="form-label fw-medium">Nome</label>
               <input name="userName" id="userName" class="form-control" type="text" aria-label="userName">
             </div>
               <!--Inserimento cognome-->
-            <div>
-              <label for="userSurname" class="form-label mt-3">Cognome</label>
+            <div class="mt-3">
+              <label for="userSurname" class="form-label fw-medium">Cognome</label>
               <input name="userSurname" id="userName" class="form-control" type="text" aria-label="userSurname">
             </div>
             <!--inserimento email-->
-            <div>
-              <label for="userEmail" class="form-label">Email address</label>
+            <div class="mt-3">
+              <label for="userEmail" class="form-label fw-medium">Email</label>
               <input name="userEmail" type="email" class="form-control" id="userEmail">
             </div>
             <!--Tipo di Lavoro-->
+              <label for="TypeOfWork" class="form-label mt-3 fw-medium">Tipo di Lavoro</label>
             <select class="form-select" aria-label="TypeOfWork">
               <option selected>Seleziona il tipo di Lavoro</option>
               <option value="backend">Backend Development</option>
               <option value="frontend">Frontend Development</option>
               <option value="analysis"> Project Analysis</option>
             </select>
-
-
-
-            </form>
-
+            <!--TextArea-->
+            <div class="mt-3">
+              <label for="userQuestion" class="form-label fw-medium">Hai delle domande? Scrivile qui</label>
+              <textarea class="form-control" id="userQuestion" rows="3"></textarea>
+            </div>
+            <!--Codice Promozionale-->
+            <div class="mt-3">
+              <label for="promotion" class="form-label fw-medium">Codice Promozionale (opzionale)</label>
+              <input name="promotion" type="text" class="form-control" id="promotion">
+            </div>
+            <!--Check privacy-->
+            <div class="form-check mt-3">
+              <input class="form-check-input" type="checkbox" value="checkPrivacy" id="checkPrivacy">
+              <label class="form-check-label fw-medium" for="checkPrivacy">
+                Accetto la Privacy Policy
+              </label>
+            </div>
+              <!--Calcola Preventivo Button e Prezzo Finale-->
+            <div class="mt-5 d-flex justify-content-around">
+              <button type="button" class="btn btn-primary">Calcola preventivo</button>
+              <span class="fw-bold fs-5">Prezzo Finale</span>
+            </div>
+          </form>
+        </div>
+              <!--sidebar (all'interno della row)-->
+        <div class="container mt-3" style="width: 18rem;">
+          <img src="./img/placeholder-image.png" class="card-img-top mt-3" alt="photo useful contacts">
+          <div class="card">
+            <h4 class="card-text mt-3 ms-3">I nostri contatti:</h4>
+            <p class="ms-3">Se hai bisogno di aiuto puoi contattarci:</p>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">help@boolfactory.test</li>
+              <li class="list-group-item">+1122334455</li>
+              <li class="list-group-item"><a href="#">Help Desk</a></li>
+            </ul>
           </div>
         </div>
       </div>
-
-   
-
     </main>
+   <!--___-->    
+    <footer class="mt-5" style="height: 80px;">
+      <div class="bg-black h-100">
+        <p class="text-white text-center pt-3">&copy; 2024-Tutti i diritti riservati</p>
+      </div>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
