--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container">
-              <h3 class="border border-dark navbar-toggler text-light" role="button" href="#">Bool Factory</h3>
+              <h3 class="border border-dark navbar-toggler text-light">Bool Factory</h3>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <!--fine button mobile inizio logo-text-->
               <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <h3 class="collapse navbar-collapse text-light" href="#">Bool Factory</h3>
+                <h3 class="collapse navbar-collapse text-light">Bool Factory</h3>
                 <ul class="navbar-nav"> <!--inizio menu-->
                   <li class="nav-item">
                     <a class="nav-link text-white-50" href="#">Home</a>
@@ -47,12 +47,12 @@
               <!--Inserimento Nome-->
             <div>
               <label for="userName" class="form-label fw-medium">Nome</label>
-              <input name="userName" id="userName" class="form-control" type="text" aria-label="userName">
+              <input name="name" id="userName" class="form-control" type="text" aria-label="name">
             </div>
               <!--Inserimento cognome-->
             <div class="mt-3">
               <label for="userSurname" class="form-label fw-medium">Cognome</label>
-              <input name="userSurname" id="userName" class="form-control" type="text" aria-label="userSurname">
+              <input name="surname" id="userSurname" class="form-control" type="text" aria-label="surname">
             </div>
             <!--inserimento email-->
             <div class="mt-3">
@@ -61,7 +61,7 @@
             </div>
             <!--Tipo di Lavoro-->
               <label for="TypeOfWork" class="form-label mt-3 fw-medium">Tipo di Lavoro</label>
-            <select class="form-select" aria-label="TypeOfWork">
+            <select id="TypeOfWork" class="form-select" aria-label="TypeOfWork">
               <option selected>Seleziona il tipo di Lavoro</option>
               <option value="backend">Backend Development</option>
               <option value="frontend">Frontend Development</option>
