--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <header>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container">
-              <h3 class="border border-dark navbar-toggler text-light">Bool Factory</h3>
+              <h3 class="border border-dark navbar-toggler text-light ps-0">Bool Factory</h3>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <!--fine button mobile inizio logo-text-->
               <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <h3 class="collapse navbar-collapse text-light">Bool Factory</h3>
-                <ul class="navbar-nav"> <!--inizio menu-->
+                <h3 class="collapse navbar-collapse text-light ms-5 ps-4">Bool Factory</h3>
+                <ul class="navbar-nav ps-1 me-md-5 pe-md-4"> <!--inizio menu-->
                   <li class="nav-item">
-                    <a class="nav-link text-white-50" href="#">Home</a>
+                    <a class="nav-link text-white-50" href="#">Home</a> <!--ms-3 allinea menu responsive-->
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-white-50" href="#">Servizi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white-50" href="#">Contatti</a>
+                    <a class="nav-link text-white-50" href="#">Contatti</a> <!--me-5 margine per allineare sidebar e contatti-->
                   </li>
                 </ul>
               </div>
@@ -36,8 +36,8 @@
     <main class="container">
 
     <!--Form-->
-      <div class="row">
-        <div class="col-lg-8">
+      <div class="row justify-content-center">
+        <div class="col-xl-8"> <!--responsive mobile first 1.2k pixel (sidebar accanto al form) non prima per rispettare gli spazi desktop-->
           <form action="#">
               <!--Titolo-->
             <div >
@@ -85,16 +85,16 @@
               </label>
             </div>
               <!--Calcola Preventivo Button e Prezzo Finale-->
-            <div class="mt-5 d-flex justify-content-around">
-              <button type="button" class="btn btn-primary">Calcola preventivo</button>
-              <span class="fw-bold fs-5">Prezzo Finale</span>
+            <div class="mt-5 mb-5 d-flex justify-content-around flex-wrap flex-md-nowrap"> <!--responsive mobile first default wrap per poi toglierlo-->
+              <button type="button" class="btn btn-primary col-6 col-md-auto ">Calcola preventivo</button>
+              <span class="fw-bold fs-5 col-7 col-md-auto text-center mt-3">Prezzo Finale</span>
             </div>
           </form>
         </div>
               <!--sidebar (all'interno della row)-->
-        <div class="container mt-3" style="width: 18rem;">
-          <img src="./img/placeholder-image.png" class="card-img-top mt-3" alt="photo useful contacts">
-          <div class="card">
+        <div class="ms-5 ms-md-1 mt-3" style="width: 18rem;">
+          <img src="./img/placeholder-image.png" class="card-img-top mt-3 rounded-top" alt="photo useful contacts">
+          <div class="border"> <!--inserito border e non card per i bordi (ad angolo retto) card ha radius di default-->
             <h4 class="card-text mt-3 ms-3">I nostri contatti:</h4>
             <p class="ms-3">Se hai bisogno di aiuto puoi contattarci:</p>
             <ul class="list-group list-group-flush">
@@ -112,7 +112,6 @@
         <p class="text-white text-center pt-3">&copy; 2024-Tutti i diritti riservati</p>
       </div>
     </footer>
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
 </body>
