--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container">
-              <h3 class="border border-dark navbar-toggler text-light ps-0">Bool Factory</h3>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+              <a class="border border-dark text-decoration-none navbar-toggler text-light fs-3 me-5 ps-0" href="#">Bool Factory</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLg" aria-controls="navbarLg" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <!--fine button mobile inizio logo-text-->
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <h3 class="collapse navbar-collapse text-light ms-5 ps-4">Bool Factory</h3>
+              <div class="collapse navbar-collapse" id="navbarLg">
+                <a class="collapse navbar-collapse text-light text-decoration-none fs-3 ms-5 ps-4" href="#">Bool Factory</a>
                 <ul class="navbar-nav ps-1 me-md-5 pe-md-4"> <!--inizio menu-->
                   <li class="nav-item">
                     <a class="nav-link text-white-50" href="#">Home</a> <!--ms-3 allinea menu responsive-->
@@ -60,8 +60,8 @@
               <input name="userEmail" type="email" class="form-control" id="userEmail">
             </div>
             <!--Tipo di Lavoro-->
-              <label for="TypeOfWork" class="form-label mt-3 fw-medium">Tipo di Lavoro</label>
-            <select id="TypeOfWork" class="form-select" aria-label="TypeOfWork">
+              <label for="typeOfWork" class="form-label mt-3 fw-medium">Tipo di Lavoro</label>
+            <select id="typeOfWork" class="form-select" aria-label="typeOfWork">
               <option selected>Seleziona il tipo di Lavoro</option>
               <option value="backend">Backend Development</option>
               <option value="frontend">Frontend Development</option>
@@ -85,7 +85,7 @@
               </label>
             </div>
               <!--Calcola Preventivo Button e Prezzo Finale-->
-            <div class="mt-5 mb-5 d-flex justify-content-around flex-wrap flex-md-nowrap"> <!--responsive mobile first default wrap per poi toglierlo-->
+            <div class="my-5 d-flex justify-content-around flex-wrap flex-md-nowrap"> <!--responsive mobile first default wrap per poi toglierlo-->
               <button type="button" class="btn btn-primary col-6 col-md-auto ">Calcola preventivo</button>
               <span class="fw-bold fs-5 col-7 col-md-auto text-center mt-3">Prezzo Finale</span>
             </div>
