feat: js click and price

--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
               </label>
             </div>
               <!--Calcola Preventivo Button e Prezzo Finale-->
-            <div class="my-5 d-flex justify-content-around flex-wrap flex-md-nowrap"> <!--responsive mobile first default wrap per poi toglierlo-->
-              <button type="button" class="btn btn-primary col-6 col-md-auto ">Calcola preventivo</button>
-              <span class="fw-bold fs-5 col-7 col-md-auto text-center mt-3">Prezzo Finale</span>
+            <div class="d-flex justify-content-around flex-wrap flex-md-nowrap"> <!--responsive mobile first default wrap per poi toglierlo-->
+              <div>
+                <button id="submitCost" type="button" class="btn btn-primary col-6 col-md-auto mt-5 ">Calcola preventivo</button> 
+              </div>
+              <div id="finalPrice" class="fw-bold fs-5 col-7 col-md-auto text-center mt-4 pt-2">Prezzo Finale</div>
             </div>
           </form>
         </div>
