feat: email promo code check

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             <div class="mt-3">
               <label for="userEmail" class="form-label fw-medium">Email</label>
               <input name="userEmail" type="email" class="form-control" id="userEmail">
+              <div class="invalid-feedback">
+                Non hai inserito una e-mail valida
+              </div>
             </div>
             <!--Tipo di Lavoro-->
               <label for="typeOfWork" class="form-label mt-3 fw-medium">Tipo di Lavoro</label>
