fix: responsive button and sidebar

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <!--Calcola Preventivo Button e Prezzo Finale-->
             <div class="d-flex justify-content-around flex-wrap flex-md-nowrap"> <!--responsive mobile first default wrap per poi toglierlo-->
               <div>
-                <button id="submitCost" type="button" class="btn btn-primary col-6 col-md-auto mt-5 ">Calcola preventivo</button> 
+                <button id="submitCost" type="button" class="btn btn-primary col-md-auto mt-5 ">Calcola preventivo</button> 
               </div>
               <div class="fw-bold fs-5 col-7 col-md-auto text-center mt-4 pt-2">Prezzo Finale
                 <p id="finalPrice"  class="fw-bold fs-3">-</p>
@@ -105,7 +105,7 @@
           </form>
         </div>
               <!--sidebar (all'interno della row)-->
-        <div class="ms-5 ms-md-1 mt-3" style="width: 18rem;">
+        <div class="ms-md-1 mt-3" style="width: 18rem;">
           <img src="./img/placeholder-image.png" class="card-img-top mt-3 rounded-top" alt="photo useful contacts">
           <div class="border"> <!--inserito border e non card per i bordi (ad angolo retto) card ha radius di default-->
             <h4 class="card-text mt-3 ms-3">I nostri contatti:</h4>
