--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <header>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container">
+              <!--mobile e button-->
               <a class="border border-dark text-decoration-none navbar-toggler text-light fs-3 me-5 ps-0" href="#">Bool Factory</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLg" aria-controls="navbarLg" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <!--fine button mobile inizio logo-text-->
+              <!--desktop-->
               <div class="collapse navbar-collapse" id="navbarLg">
                 <a class="collapse navbar-collapse text-light text-decoration-none fs-3 ms-5 ps-4" href="#">Bool Factory</a>
                 <ul class="navbar-nav ps-1 me-md-5 pe-md-4"> <!--inizio menu-->
@@ -94,7 +95,7 @@
               </label>
             </div>
               <!--Calcola Preventivo Button e Prezzo Finale-->
-            <div class="d-flex justify-content-around flex-wrap flex-md-nowrap"> <!--responsive mobile first default wrap per poi toglierlo-->
+            <div class="d-flex justify-content-around flex-wrap"> 
               <div>
                 <button id="submitCost" type="button" class="btn btn-primary col-md-auto mt-5 ">Calcola preventivo</button> 
               </div>
