fix: remove note html

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <a class="collapse navbar-collapse text-light text-decoration-none fs-3 ms-5 ps-4" href="#">Bool Factory</a>
                 <ul class="navbar-nav ps-1 me-md-5 pe-md-4"> <!--inizio menu-->
                   <li class="nav-item">
-                    <a class="nav-link text-white-50" href="#">Home</a> <!--ms-3 allinea menu responsive-->
+                    <a class="nav-link text-white-50" href="#">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-white-50" href="#">Servizi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white-50" href="#">Contatti</a> <!--me-5 margine per allineare sidebar e contatti-->
+                    <a class="nav-link text-white-50" href="#">Contatti</a> 
                   </li>
                 </ul>
               </div>
